# dactl-plugin-arduino-udp

./: .gitignore  AUTHORS  README.md  autogen.sh  configure.ac
src/: Makefile.am  arduino-udp-control.ui  arduino-udp.gresource.xml  arduino-udp.plugin.in  dactl-arduino-udp-config.vapi  dactl-arduino-udp-control.vala  dactl-arduino-udp-factory.vala  dactl-arduino-udp-plugin.vala
src/mcu/lib/MS5803/: MS5803.cpp  MS5803.h
src/mcu/sketch/: sketch.ino
src/mcu/src/: sketch.ino
test/: config.xml
